--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@
   animation: mulShdSpin 1.1s infinite ease;
   transform: translateZ(0);
 }
+.input-group {
+  z-index: 10;
+}
 @keyframes mulShdSpin {
   0%,
   100% {
